@@ -5,9 +5,6 @@ workflow
     :summary: Manage automated item production rules.
     :tags: fort auto jobs
 
-.. dfhack-command:: fix-job-postings
-   :summary: Fixes crashes caused by old versions of workflow.
-
 Manage repeat jobs according to stock levels. `gui/workflow` provides a simple
 front-end integrated in the game UI.
 
@@ -59,12 +56,6 @@ Usage
     List active constraints as workflow commands that re-create them; this list
     can be copied to a file, and then reloaded using the `script` built-in
     command.
-``fix-job-postings [dry-run]``
-    Fixes crashes caused by the version of workflow released with DFHack
-    0.40.24-r4. It will be run automatically if needed. If your save has never
-    been run with this version, you will never need this command. Specify the
-    ``dry-run`` keyword to see what this command would do without making any
-    changes to game state.
 
 Examples
 --------
